dodane moje upute

--- a/game.html
+++ b/game.html
@@ -9,6 +9,9 @@
                 }
             </style>
             <script>
+                //1. korak omoguči micanje sa strelicama
+                //2. korak dodaj asteroide
+                //3. kolizija
                 var myGamePiece;
                 function startGame() {
                     myGamePiece = new component(30, 30, "red", 150, 150);
