promjene za deploy

--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
             <script>
                 var myGamePiece;
                 var asteroids = [];
-                var bestTime = localStorage.getItem("bestTime") || Infinity;
+                var bestTime = localStorage.getItem("bestTime") || 0;
                 var startTime;
                 function startGame() {
                     // Create the player's game piece
