--- a/index.html
+++ b/index.html
@@ -75,7 +75,15 @@
                         ctx.save();
                         ctx.translate(this.x, this.y);
                         ctx.fillStyle = color;
+
+                        // Add a shadow 
+                        ctx.shadowColor = "black";
+                        ctx.shadowBlur = 10;
                         ctx.fillRect(this.width / -2, this.height / -2, this.width, this.height);
+
+                        // Add a black border
+                        ctx.strokeStyle = "black";
+                        ctx.strokeRect(this.width / -2 , this.height / -2 , this.width, this.height);
                         ctx.restore();
                     };
 
